force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/Apttus_Approval__Backup_Approver__c.object-meta.xml
<CustomObject>
    <description>Allows approvers and administrators to specify backup approvers.  There is an option to transfer all pending request from and to the approver and the backup approver upon activation or cancellation of backups.  The approvals engine automatically routes requests to backup approvers when this is in effect.</description>
    <label>Backup/Delegate Approver</label>
    <nameField>
        <displayFormat>BU-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup/Delegate Approvers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>