force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Cancellation_Date__c</fullName>
    <description>The date on which approval requests will stop getting assigned to the backup/delegate.</description>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>