force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/listViews/Active_Delegations.listView-meta.xml
<ListView>
    <fullName>Active_Delegations</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Backup_User__c</columns>
    <columns>Apttus_Approval__Current_User__c</columns>
    <columns>Apttus_Approval__IsActive__c</columns>
    <columns>Apttus_Approval__InEffect__c</columns>
    <columns>Apttus_Approval__Effective_Date__c</columns>
    <columns>Apttus_Approval__Expiration_Date__c</columns>
    <columns>Apttus_Approval__Cancellation_Date__c</columns>
    <columns>Apttus_Approval__IsDelegate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Approval__InEffect__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Apttus_Approval__IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Delegations</label>
</ListView>