force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Backup_User__c</columns>
    <columns>Apttus_Approval__DelegateUserIds__c</columns>
    <columns>Apttus_Approval__Current_User__c</columns>
    <columns>Apttus_Approval__IsActive__c</columns>
    <columns>Apttus_Approval__InEffect__c</columns>
    <columns>Apttus_Approval__Effective_Date__c</columns>
    <columns>Apttus_Approval__Expiration_Date__c</columns>
    <columns>Apttus_Approval__Cancellation_Date__c</columns>
    <columns>Apttus_Approval__IsDelegate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>